--- a/gutters.html
+++ b/gutters.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=PT+Sans:wght@400;700&display=swap" rel="stylesheet">
-    <meta name="description" content="Relax on a Spacious Backyard Deck Make sure you hire an experienced deck builder in Cedar Falls and Cedar Rapids, IA, IA. Our professional deck builder can construct a treated wood, cedar wood, Trex or AZEK composite deck on your property in no time!">
+    <meta name="description" content="Relax on a Spacious Backyard Deck Make sure you hire an experienced deck builder in Cedar Falls and Cedar Rapids, IA. Our professional deck builder can construct a treated wood, cedar wood, Trex or AZEK composite deck on your property in no time!">
     <!-- Global site tag (gtag.js) - Google Analytics -->
    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-188956910-1">
    </script>
@@ -27,25 +27,25 @@
     <nav id="navbar"></nav>
     <div class="hero-nav gutters">
     <div class="hero-nav__inner">
-        <h1>Make sure you hire an experienced gutter installer or gutter guard installer in Cedar Falls and Cedar Rapids, IA, IA</h1>
+        <h1>Make sure you hire an experienced gutter installer or gutter guard installer in Cedar Falls and Cedar Rapids, IA</h1>
         <a class="btn btn-primary" href="/contact-us">Contact Us</a>
     </div>
 </div>
 <div class="subpage-content">
-  <h2>Make sure you hire an experienced deck builder in Cedar Falls and Cedar Rapids, IA, IA</h2>
+  <h2>Make sure you hire an experienced deck builder in Cedar Falls and Cedar Rapids, IA</h2>
     <p>Our experienced sales associate will meet your needs at your home, go over your material preferences and get to work designing and budgeting your new gutters and or gutter guards.  You’ll have new gutters that you love and will show off your home in no time. Our experienced staff can work with your budget and help you make the best decision that will provide the best value to your home.
     </p>
     <br />
-    <p>T.E.A.M. Builders LTD has experience installing gutters of all kinds on properties in the Cedar Falls and Cedar Rapids, IA, IA area. Rely on us to build your custom deck quickly and correctly.</p>
+    <p>T.E.A.M. Builders LTD has experience installing gutters of all kinds on properties in the Cedar Falls and Cedar Rapids, IA area. Rely on us to build your custom deck quickly and correctly.</p>
     <br />
     <h3>Enjoy your home’s curb appeal </h3>
-    <p>Looking for a trustworthy gutter installer? Look no further. T.E.A.M. Builders LTD installs gutters in Cedar Falls and Cedar Rapids, IA, IA and surrounding areas. </p>
+    <p>Looking for a trustworthy gutter installer? Look no further. T.E.A.M. Builders LTD installs gutters in Cedar Falls and Cedar Rapids, IA and surrounding areas. </p>
     <br />
       <div class="text-align-left">
           <br />
           <h4 class="h1">Our Work</h4>
           <div class="our-work-images">
-            <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/gutters/gutter-tech.jpg" alt="Gutters in Cedar Falls and Cedar Rapids, IA, IA">
+            <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/gutters/gutter-tech.jpg" alt="Gutters in Cedar Falls and Cedar Rapids, IA">
             <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/gutters/man-installing-gutter.jpg" alt="T.E.A.M. Builders Contractor Installing Gutter">
 
           </div>
