--- a/index.html
+++ b/index.html
@@ -150,9 +150,9 @@
   <section id="below-main-content-section">
     <div class="below-main-content">
       <h2>Make Your House Look Like New</h2>
-      <h3>SCHEDULE A CONSULTATION WITH A REMODELING CONTRACTOR IN CEDAR FALLS OR CEDAR RAPIDS, IA</h3>
+      <h3>Schedule a consultation with a remodeling contractor in Cedar Falls or Cedar Rapids, IA.</h3>
       <p style="">Our home remodeler should be the top choice for your home renovation project. With more than a decade of experience, the crew at TEAM Builders LTD has what it takes to transform your current house into your dream home. There is no project too big or too small for us.</p>
-      <p>Call 319-481-8326 now to discuss your design ideas with a skilled remodeling contractor in Cedar Falls and Cedar Rapids, IA</p>
+      <p>Call 319-481-8326 now to discuss your design ideas with a skilled remodeling contractor in Cedar Falls and Cedar Rapids, IA.</p>
       <br />
       <a href="/process" class="btn btn-primary">Our Process</a>
     </div>
