add lazyload, update head

--- a/about-t-e-a-m-builders.html
+++ b/about-t-e-a-m-builders.html
@@ -6,7 +6,7 @@
     <title>About Our Owners | T.E.A.M. Builders Ltd.</title>
     <meta name="description" content="T.E.A.M. Builders Ltd. began in the summer of 2017 when Trevor Engels, owner of Engels Repair and Remodel, and Austin Maginnis, construction entrepreneur, decided to join forces to create a construction team like none other in the Cedar Valley.">
     <link rel="shortcut icon" type="image/png" href="https://teambuilders-media.s3.us-east-2.amazonaws.com/favicon.png">
-    <link href="css/main.css" rel="stylesheet" type="text/css" />
+    <link href="css/main.min.css" rel="stylesheet" type="text/css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=PT+Sans:wght@400;700&display=swap" rel="stylesheet">
