--- a/contact-us.html
+++ b/contact-us.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width">
     <title>Contact Us | T.E.A.M. Builders Ltd.</title>
     <link rel="shortcut icon" type="image/png" href="https://teambuilders-media.s3.us-east-2.amazonaws.com/favicon.png">
-    <link href="css/main.css" rel="stylesheet" type="text/css" />
+    <link href="css/main.min.css" rel="stylesheet" type="text/css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=PT+Sans:wght@400;700&display=swap" rel="stylesheet">
@@ -61,9 +61,9 @@
           <i class="fa fa-clock-o" aria-hidden="true"></i>
           <p>Hours</p>
           <ul>
-            <li>M-F: 8:00 AM - 5:00 PM</li>
-            <li>S: Closed</li>
-            <li>Su: Closed</li>
+            <p>M-F: 8:00 AM - 5:00 PM</p>
+            <p>S: Closed</p>
+            <p>Su: Closed</p>
           </ul>
         </div>
        </div>
