minify script file, remove slick slider

--- a/agriculture-commercial-buildings.html
+++ b/agriculture-commercial-buildings.html
@@ -56,7 +56,7 @@
     </footer>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <!-- Scripts -->
-    <script src="js/script.js"></script>
+    <script src="js/script.min.js"></script>
     <script src="js/loadTemplate.js"></script>
   </body>
 </html>
