--- a/event-venues.html
+++ b/event-venues.html
@@ -63,7 +63,7 @@ gtag('config', 'UA-188956910-1');
     <footer id="footer">
     </footer>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script src="js/script.js"></script>
+    <script src="js/script.min.js"></script>
     <script src="js/loadTemplate.js"></script>
   </body>
 </html>
