--- a/kitchen-renovations.html
+++ b/kitchen-renovations.html
@@ -136,7 +136,7 @@
     <footer id="footer">
     </footer>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script src="js/script.js"></script>
+    <script src="js/script.min.js"></script>
     <script src="js/loadTemplate.js"></script>
   </body>
 </html>
