--- a/pergolas.html
+++ b/pergolas.html
@@ -105,7 +105,7 @@ Increase your property value with a long lasting and maintenance-free deck/pergo
     <footer id="footer">
     </footer>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script src="js/script.js"></script>
+    <script src="js/script.min.js"></script>
     <script src="js/loadTemplate.js"></script>
   </body>
 </html>
