--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
           <h3><a href="/basement-renovations">Basement</a></h3>
         </div>
         <div class="service-card-image">
-          <img src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/basement-renovations/basement-renovation.jpeg" alt="Basement">
+          <img src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/basement-renovations/basement-renovation.jpeg" alt="Basement" class="lazyload">
         </div>
       </div>
       <div class="service-card">
@@ -72,7 +72,7 @@
           <h3><a href="/kitchen-renovations">Kitchen</a></h3>
         </div>
         <div class="service-card-image">
-          <img src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/kitchen-renovations/kitchen-renovation-island.jpeg" alt="Kitchen">
+          <img src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/kitchen-renovations/kitchen-renovation-island.jpeg" alt="Kitchen" class="lazyload">
         </div>
       </div>  
      </div> 
@@ -82,7 +82,7 @@
               <h3><a href="/fencing">Fences</a></h3>
             </div>
             <div class="service-card-image">
-              <img src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/fencing/fence.png" alt="Fencing">
+              <img src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/fencing/fence.png" alt="Fencing" class="lazyload">
             </div>
           </div>
           <div class="service-card mr-20">
@@ -90,7 +90,7 @@
               <h3><a href="/roofing">Roofing</a></h3>
             </div>
             <div class="service-card-image">
-              <img src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/roofing/DJI_0665.JPG" alt="Roofing">
+              <img src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/roofing/DJI_0665.JPG" alt="Roofing" class="lazyload">
             </div>
           </div>
           <div class="service-card mr">
@@ -98,7 +98,7 @@
               <h3><a href="/deck-pergolas">Decks</a></h3>
             </div>
             <div class="service-card-image">
-                <img src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/decks/176399824_1450421571975940_5545486234082043760_n.jpg" alt="New Deck Floorplan">
+                <img src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/decks/176399824_1450421571975940_5545486234082043760_n.jpg" alt="New Deck Floorplan" class="lazyload">
             </div>
           </div>  
         <div class="service-card mr-20">
@@ -106,7 +106,7 @@
               <h3><a href="/pergolas">Pergolas</a></h3>
             </div>
             <div class="service-card-image">
-              <img src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/pergolas/p1.jpg" alt="Pergolas">
+              <img src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/pergolas/p1.jpg" alt="Pergolas" class="lazyload">
             </div>
           </div>  
           <div class="service-card mr-20">
@@ -122,7 +122,7 @@
               <h3><a href="/gutters">Gutters</a></h3>
             </div>
             <div class="service-card-image">
-                <img src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/gutters/gutter-tech.jpg" alt="Gutters in Cedar Falls, IA">
+                <img src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/gutters/gutter-tech.jpg" alt="Gutters in Cedar Falls, IA" class="lazyload">
             </div>
           </div> 
     </div>
@@ -134,7 +134,7 @@
           <h3><a href="/interior-remodeling">Home Additions</a></h3>
         </div>
         <div class="service-card-image">
-          <img src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/home-additions/home+additions.JPG" alt="Home Additions">
+          <img src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/home-additions/home+additions.JPG" alt="Home Additions" class="lazyload">
         </div>
       </div>
       <div class="service-card">
@@ -142,7 +142,7 @@
           <h3><a href="/shed-homes-shouses">Shed Houses</a></h3>
         </div>
         <div class="service-card-image">
-          <img src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/commercial/farm-shed.png" alt="Agricultural & Commrcial Buidings">
+          <img src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/commercial/farm-shed.png" alt="Agricultural & Commrcial Buidings" class="lazyload">
         </div>
       </div> 
      </div> 
@@ -156,7 +156,7 @@
       <a href="/process" class="btn btn-primary">Our Process</a>
     </div>
     <div class="below-main-content-image">
-      <img src="https://teambuilders-media.s3.us-east-2.amazonaws.com/our-process-1.png" alt="Our Process">
+      <img src="https://teambuilders-media.s3.us-east-2.amazonaws.com/our-process-1.png" alt="Our Process" class="lazyload">
     </div>
   </section>
 
@@ -169,69 +169,6 @@
       <a class="btn btn-secondary" href="/contact-us">Get an Estimate</a>
     </div>
   </section>
-  <!-- <section>
-    <div class="testimonial-container">
-      <h3 class="h1">What Our Customers Say</h3>
-      <div class="testimonials">
-        <div class="testimonial">
-          <div class="quote">
-            <h2></h2>
-            <img src="https://teambuilders-media.s3.us-east-2.amazonaws.com/testimonial-quote.png">
-          </div>
-          <p>
-            First off, I never leave a review but this time is different because of the excellent service I received from Trevor, Kent, and Don and their crews. I had extensive concrete work done as well as a new deck built, and additional landscaping. I can not stress how happy I am with how it all turned out as well as the flexibility to add some additional work while the crews were here... THANK YOU TEAM BUILDERS..You have an exceptional team, integrity,  and will be contacting you again with my next big project.
-          </p>
-        </div>
-        <div class="testimonial">
-          <div class="quote">
-            <h2></h2>
-            <img src="https://teambuilders-media.s3.us-east-2.amazonaws.com/testimonial-quote.png">
-          </div>
-          <p>
-            We had the best experience! They provided us with the deck of our dreams and for that we are so grateful. Austin and Trevor are an excellent team and they make the process easy and seamless. We would absolutely use their services again.
-          </p>
-        </div>
-        <div class="testimonial">
-          <div class="quote">
-            <h2></h2>
-            <img src="https://teambuilders-media.s3.us-east-2.amazonaws.com/testimonial-quote.png">
-          </div>
-          <p>
-            T.E.A.M Builders exceeded our expectations when it came to timing, quality, craftmanship and customer service regarding our composite deck the built from scratch. Any issue was solved rapidly and communication was a breeze. I would recommend them for any project, big or small! You guys rock!
-          </p>
-        </div>
-        <div class="testimonial">
-          <div class="quote">
-            <h2></h2>
-            <img src="https://teambuilders-media.s3.us-east-2.amazonaws.com/testimonial-quote.png">
-          </div>
-          <p>
-            Amazing work and very professional I had zero complaints! Austin and his crew transformed my deck into an outdoor oasis. I would highly recommend them for any future projects and anyone in the Cedar Falls area.
-          </p>
-        </div>
-        <div class="testimonial">
-          <div class="quote">
-            <h2></h2>
-            <img src="https://teambuilders-media.s3.us-east-2.amazonaws.com/testimonial-quote.png">
-          </div>
-          <p>
-            I contacted Team Builders to do a roof replacement on my newly purchased home. They got the estimate to me within a couple hours, explained everything to me and were able to schedule the repair super quickly! The price is extremely competitive and they only use the highest quality of materials! They were able to get my roof done in one day - and the roof looks amazing! Every interaction I had with them was great! I won’t trust anyone else to do my home repairs!
-          </p>
-        </div>
-        <div class="testimonial">
-          <div class="quote">
-            <h2></h2>
-            <img src="https://teambuilders-media.s3.us-east-2.amazonaws.com/testimonial-quote.png">
-          </div>
-          <p>
-            This team is absolutely awesome. They were very thorough and verified everything before moving forward. They made sure we were satisfied with all items. They even came back quickly to add Lattice upon my request. Let me just say, my deck looks 100% better than it did before they started. I am absolutely amazed at the finished work. I highly, highly recommend T.E.A.M. Builders
-          </p>
-        </div>
-      </div>
-    </div>
-  </section> -->
-
-
 
 <div class="slider">
     <input type="radio" name="slider" checked="checked" class="slider__nav"/>
@@ -243,36 +180,36 @@
 
     <div class="slider__inner">
       <div class="slider__contents">
-        <img src="https://teambuilders-media.s3.us-east-2.amazonaws.com/testimonial-quote.png">
+        <img src="https://teambuilders-media.s3.us-east-2.amazonaws.com/testimonial-quote.png" class="lazyload">
         <p class="slider__txt">
             First off, I never leave a review but this time is different because of the excellent service I received from Trevor, Kent, and Don and their crews. I had extensive concrete work done as well as a new deck built, and additional landscaping. I can not stress how happy I am with how it all turned out as well as the flexibility to add some additional work while the crews were here... THANK YOU TEAM BUILDERS..You have an exceptional team, integrity,  and will be contacting you again with my next big project.</p>
       </div>
       <div class="slider__contents">
-        <img src="https://teambuilders-media.s3.us-east-2.amazonaws.com/testimonial-quote.png">
+        <img src="https://teambuilders-media.s3.us-east-2.amazonaws.com/testimonial-quote.png" class="lazyload">
         <p class="slider__txt">
             We had the best experience! They provided us with the deck of our dreams and for that we are so grateful. Austin and Trevor are an excellent team and they make the process easy and seamless. We would absolutely use their services again.
         </p>
       </div>
       <div class="slider__contents">
-        <img src="https://teambuilders-media.s3.us-east-2.amazonaws.com/testimonial-quote.png">
+        <img src="https://teambuilders-media.s3.us-east-2.amazonaws.com/testimonial-quote.png" class="lazyload">
         <p class="slider__txt">
             T.E.A.M Builders exceeded our expectations when it came to timing, quality, craftmanship and customer service regarding our composite deck the built from scratch. Any issue was solved rapidly and communication was a breeze. I would recommend them for any project, big or small! You guys rock!
         </p>
       </div>
       <div class="slider__contents">
-        <img src="https://teambuilders-media.s3.us-east-2.amazonaws.com/testimonial-quote.png">
+        <img src="https://teambuilders-media.s3.us-east-2.amazonaws.com/testimonial-quote.png" class="lazyload">
         <p class="slider__txt">
             Amazing work and very professional I had zero complaints! Austin and his crew transformed my deck into an outdoor oasis. I would highly recommend them for any future projects and anyone in the Cedar Falls area.
         </p>
       </div>
       <div class="slider__contents">
-        <img src="https://teambuilders-media.s3.us-east-2.amazonaws.com/testimonial-quote.png">
+        <img src="https://teambuilders-media.s3.us-east-2.amazonaws.com/testimonial-quote.png" class="lazyload">
         <p class="slider__txt">
             I contacted Team Builders to do a roof replacement on my newly purchased home. They got the estimate to me within a couple hours, explained everything to me and were able to schedule the repair super quickly! The price is extremely competitive and they only use the highest quality of materials! They were able to get my roof done in one day - and the roof looks amazing! Every interaction I had with them was great! I won’t trust anyone else to do my home repairs!
         </p>
       </div>
       <div class="slider__contents">
-        <img src="https://teambuilders-media.s3.us-east-2.amazonaws.com/testimonial-quote.png">
+        <img src="https://teambuilders-media.s3.us-east-2.amazonaws.com/testimonial-quote.png" class="lazyload">
         <p class="slider__txt">
             This team is absolutely awesome. They were very thorough and verified everything before moving forward. They made sure we were satisfied with all items. They even came back quickly to add Lattice upon my request. Let me just say, my deck looks 100% better than it did before they started. I am absolutely amazed at the finished work. I highly, highly recommend T.E.A.M. Builders
         </p>
@@ -309,7 +246,6 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <!-- Scripts -->
     <script src="js/script.min.js"></script>
-    <script src="js/loadTemplate.js"></script>
     <script src="js/lazysizes.min.js"></script>
   </body>
 </html>
