--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
     <title>T.E.A.M. Builders Ltd. | Home Remodeling in Cedar Falls, IA</title>
-    <link rel="shortcut icon" type="image/png" href="https://d319epilr9o2mf.cloudfront.net/favicon.png">
+    <link rel="shortcut icon" type="image/png" href="https://https://d319epilr9o2mf.cloudfront.net/favicon.png">
     <link href="css/main.min.css" rel="stylesheet" type="text/css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <!-- <link rel="preconnect" href="https://fonts.gstatic.com"> -->
@@ -24,7 +24,7 @@
     <script id="mcjs">!function(c,h,i,m,p){m=c.createElement(h),p=c.getElementsByTagName(h)[0],m.async=1,m.src=i,p.parentNode.insertBefore(m,p)}(document,"script","https://chimpstatic.com/mcjs-connected/js/users/3505b437145ee33b184d2b30a/4b299f4ad6c300bf5979542d3.js");</script>
     <meta name="description" content="Home Remodeling Contractor in Cedar Falls and Cedar Rapids, IA">
     <meta name="keywords" content="home remodeling cedar falls, home remodeling cedar rapids, home remodeling cedar valley, t.e.a.m. builders cedar falls, t.e.a.m. builders cedar rapids">
-    <meta property "og:image" content="d319epilr9o2mf.cloudfront.net/team-builders-logo.png" />
+    <meta property "og:image" content="https://d319epilr9o2mf.cloudfront.net/team-builders-logo.png" />
     <meta property "og:image:type" content="/image/png" />   
     <meta property "og:image:width" content="250" />  
     <meta property "og:image:height" content="50" />  
@@ -47,7 +47,7 @@
     </div>
     <div>
       <div>
-          <img src="d319epilr9o2mf.cloudfront.net/work/decks/72319801_1004989043185864_1142861226615767040_n.jpg">
+          <img src="https://d319epilr9o2mf.cloudfront.net/work/decks/72319801_1004989043185864_1142861226615767040_n.jpg">
       </div>
     </div>
     </div>
@@ -64,7 +64,7 @@
           <h3><a href="/basement-renovations">Basement</a></h3>
         </div>
         <div class="service-card-image">
-          <img src="d319epilr9o2mf.cloudfront.net/work/basement-renovations/basement-renovation.jpeg" alt="Basement" class="lazyload">
+          <img src="https://d319epilr9o2mf.cloudfront.net/work/basement-renovations/basement-renovation.jpeg" alt="Basement" class="lazyload">
         </div>
       </div>
       <div class="service-card">
@@ -72,7 +72,7 @@
           <h3><a href="/kitchen-renovations">Kitchen</a></h3>
         </div>
         <div class="service-card-image">
-          <img src="d319epilr9o2mf.cloudfront.net/work/kitchen-renovations/kitchen-renovation-island.jpeg" alt="Kitchen" class="lazyload">
+          <img src="https://d319epilr9o2mf.cloudfront.net/work/kitchen-renovations/kitchen-renovation-island.jpeg" alt="Kitchen" class="lazyload">
         </div>
       </div>  
      </div> 
@@ -82,7 +82,7 @@
               <h3><a href="/fencing">Fences</a></h3>
             </div>
             <div class="service-card-image">
-              <img src="d319epilr9o2mf.cloudfront.net/work/fencing/fence.png" alt="Fencing" class="lazyload">
+              <img src="https://d319epilr9o2mf.cloudfront.net/work/fencing/fence.png" alt="Fencing" class="lazyload">
             </div>
           </div>
           <div class="service-card mr-20">
@@ -90,7 +90,7 @@
               <h3><a href="/roofing">Roofing</a></h3>
             </div>
             <div class="service-card-image">
-              <img src="d319epilr9o2mf.cloudfront.net/work/roofing/DJI_0665.JPG" alt="Roofing" class="lazyload">
+              <img src="https://d319epilr9o2mf.cloudfront.net/work/roofing/DJI_0665.JPG" alt="Roofing" class="lazyload">
             </div>
           </div>
           <div class="service-card mr">
@@ -98,7 +98,7 @@
               <h3><a href="/deck-pergolas">Decks</a></h3>
             </div>
             <div class="service-card-image">
-                <img src="d319epilr9o2mf.cloudfront.net/work/decks/176399824_1450421571975940_5545486234082043760_n.jpg" alt="New Deck Floorplan" class="lazyload">
+                <img src="https://d319epilr9o2mf.cloudfront.net/work/decks/176399824_1450421571975940_5545486234082043760_n.jpg" alt="New Deck Floorplan" class="lazyload">
             </div>
           </div>  
         <div class="service-card mr-20">
@@ -106,7 +106,7 @@
               <h3><a href="/pergolas">Pergolas</a></h3>
             </div>
             <div class="service-card-image">
-              <img src="d319epilr9o2mf.cloudfront.net/work/pergolas/p1.jpg" alt="Pergolas" class="lazyload">
+              <img src="https://d319epilr9o2mf.cloudfront.net/work/pergolas/p1.jpg" alt="Pergolas" class="lazyload">
             </div>
           </div>  
           <div class="service-card mr-20">
@@ -114,7 +114,7 @@
               <h3><a href="/siding">Siding</a></h3>
             </div>
             <div class="service-card-image">
-              <img src="d319epilr9o2mf.cloudfront.net/work/siding/siding.png" alt="Siding">
+              <img src="https://d319epilr9o2mf.cloudfront.net/work/siding/siding.png" alt="Siding">
             </div>
           </div>
           <div class="service-card">
@@ -122,7 +122,7 @@
               <h3><a href="/gutters">Gutters</a></h3>
             </div>
             <div class="service-card-image">
-                <img src="d319epilr9o2mf.cloudfront.net/work/gutters/gutter-tech.jpg" alt="Gutters in Cedar Falls, IA" class="lazyload">
+                <img src="https://d319epilr9o2mf.cloudfront.net/work/gutters/gutter-tech.jpg" alt="Gutters in Cedar Falls, IA" class="lazyload">
             </div>
           </div> 
     </div>
@@ -134,7 +134,7 @@
           <h3><a href="/interior-remodeling">Home Additions</a></h3>
         </div>
         <div class="service-card-image">
-          <img src="d319epilr9o2mf.cloudfront.net/work/home-additions/home+additions.JPG" alt="Home Additions" class="lazyload">
+          <img src="https://d319epilr9o2mf.cloudfront.net/work/home-additions/home+additions.JPG" alt="Home Additions" class="lazyload">
         </div>
       </div>
       <div class="service-card">
@@ -142,7 +142,7 @@
           <h3><a href="/shed-homes-shouses">Shed Houses</a></h3>
         </div>
         <div class="service-card-image">
-          <img src="d319epilr9o2mf.cloudfront.net/work/commercial/farm-shed.png" alt="Agricultural & Commrcial Buidings" class="lazyload">
+          <img src="https://d319epilr9o2mf.cloudfront.net/work/commercial/farm-shed.png" alt="Agricultural & Commrcial Buidings" class="lazyload">
         </div>
       </div> 
      </div> 
@@ -156,7 +156,7 @@
       <a href="/process" class="btn btn-primary">Our Process</a>
     </div>
     <div class="below-main-content-image">
-      <img src="d319epilr9o2mf.cloudfront.net/our-process-1.png" alt="Our Process" class="lazyload">
+      <img src="https://d319epilr9o2mf.cloudfront.net/our-process-1.png" alt="Our Process" class="lazyload">
     </div>
   </section>
 
@@ -180,36 +180,36 @@
 
     <div class="slider__inner">
       <div class="slider__contents">
-        <img src="d319epilr9o2mf.cloudfront.net/testimonial-quote.png" class="lazyload">
+        <img src="https://d319epilr9o2mf.cloudfront.net/testimonial-quote.png" class="lazyload">
         <p class="slider__txt">
             First off, I never leave a review but this time is different because of the excellent service I received from Trevor, Kent, and Don and their crews. I had extensive concrete work done as well as a new deck built, and additional landscaping. I can not stress how happy I am with how it all turned out as well as the flexibility to add some additional work while the crews were here... THANK YOU TEAM BUILDERS..You have an exceptional team, integrity,  and will be contacting you again with my next big project.</p>
       </div>
       <div class="slider__contents">
-        <img src="d319epilr9o2mf.cloudfront.net/testimonial-quote.png" class="lazyload">
+        <img src="https://d319epilr9o2mf.cloudfront.net/testimonial-quote.png" class="lazyload">
         <p class="slider__txt">
             We had the best experience! They provided us with the deck of our dreams and for that we are so grateful. Austin and Trevor are an excellent team and they make the process easy and seamless. We would absolutely use their services again.
         </p>
       </div>
       <div class="slider__contents">
-        <img src="d319epilr9o2mf.cloudfront.net/testimonial-quote.png" class="lazyload">
+        <img src="https://d319epilr9o2mf.cloudfront.net/testimonial-quote.png" class="lazyload">
         <p class="slider__txt">
             T.E.A.M Builders exceeded our expectations when it came to timing, quality, craftmanship and customer service regarding our composite deck the built from scratch. Any issue was solved rapidly and communication was a breeze. I would recommend them for any project, big or small! You guys rock!
         </p>
       </div>
       <div class="slider__contents">
-        <img src="d319epilr9o2mf.cloudfront.net/testimonial-quote.png" class="lazyload">
+        <img src="https://d319epilr9o2mf.cloudfront.net/testimonial-quote.png" class="lazyload">
         <p class="slider__txt">
             Amazing work and very professional I had zero complaints! Austin and his crew transformed my deck into an outdoor oasis. I would highly recommend them for any future projects and anyone in the Cedar Falls area.
         </p>
       </div>
       <div class="slider__contents">
-        <img src="d319epilr9o2mf.cloudfront.net/testimonial-quote.png" class="lazyload">
+        <img src="https://d319epilr9o2mf.cloudfront.net/testimonial-quote.png" class="lazyload">
         <p class="slider__txt">
             I contacted Team Builders to do a roof replacement on my newly purchased home. They got the estimate to me within a couple hours, explained everything to me and were able to schedule the repair super quickly! The price is extremely competitive and they only use the highest quality of materials! They were able to get my roof done in one day - and the roof looks amazing! Every interaction I had with them was great! I won’t trust anyone else to do my home repairs!
         </p>
       </div>
       <div class="slider__contents">
-        <img src="d319epilr9o2mf.cloudfront.net/testimonial-quote.png" class="lazyload">
+        <img src="https://d319epilr9o2mf.cloudfront.net/testimonial-quote.png" class="lazyload">
         <p class="slider__txt">
             This team is absolutely awesome. They were very thorough and verified everything before moving forward. They made sure we were satisfied with all items. They even came back quickly to add Lattice upon my request. Let me just say, my deck looks 100% better than it did before they started. I am absolutely amazed at the finished work. I highly, highly recommend T.E.A.M. Builders
         </p>
