--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
     <title>T.E.A.M. Builders Ltd. | Home Remodeling in Cedar Falls, IA</title>
-    <link rel="shortcut icon" type="image/png" href="https://https://d319epilr9o2mf.cloudfront.net/favicon.png">
+    <link rel="shortcut icon" type="image/png" href="https://d319epilr9o2mf.cloudfront.net/favicon.png">
     <link href="css/main.min.css" rel="stylesheet" type="text/css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <!-- <link rel="preconnect" href="https://fonts.gstatic.com"> -->
