--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
     <!-- <link rel="preconnect" href="https://fonts.gstatic.com"> -->
     <link href="https://fonts.googleapis.com/css2?family=PT+Sans:wght@400;700&display=swap" rel="stylesheet">
     <link href="//cdn-images.mailchimp.com/embedcode/slim-10_7.css" rel="stylesheet" type="text/css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="js/script.min.js"></script>
+    <script src="js/lazysizes.min.js"></script>
    <!-- Global site tag (gtag.js) - Google Analytics -->
    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-188956910-1">
    </script>
@@ -239,10 +242,6 @@
   <div id="employment-application">
     <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfa1Dc16bV1gSMrzIZGAVtYy03mKdt_nOle1jhHwtLzM8YDRA/viewform?embedded=true" width="700" height="520" frameborder="0" marginheight="0" marginwidth="0" loading="lazy">Loading…</iframe>
   </div>
-  <footer id="footer">
-  </footer>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script src="js/script.min.js"></script>
-    <script src="js/lazysizes.min.js"></script>
+  <footer id="footer"></footer>
   </body>
 </html>
