--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     </div>
     <div>
       <div>
-          <img src="https://d319epilr9o2mf.cloudfront.net/work/decks/72319801_1004989043185864_1142861226615767040_n.jpg">
+          <img src="https://d319epilr9o2mf.cloudfront.net/work/decks/large-gray-deck.jpg" alt="Large Multilevel Gray Deck in Cedar Falls, IA">
       </div>
     </div>
     </div>
@@ -101,7 +101,7 @@
               <h3><a href="/deck-pergolas">Decks</a></h3>
             </div>
             <div class="service-card-image">
-                <img src="https://d319epilr9o2mf.cloudfront.net/work/decks/176399824_1450421571975940_5545486234082043760_n.jpg" alt="New Deck Floorplan" class="lazyload">
+                <img src="https://d319epilr9o2mf.cloudfront.net/work/decks/overhead-deck-garden.jpg" alt="New Deck Floorplan" class="lazyload">
             </div>
           </div>  
         <div class="service-card mr-20">
@@ -137,7 +137,7 @@
           <h3><a href="/interior-remodeling">Home Additions</a></h3>
         </div>
         <div class="service-card-image">
-          <img src="https://d319epilr9o2mf.cloudfront.net/work/home-additions/home+additions.JPG" alt="Home Additions" class="lazyload">
+          <img src="https://d319epilr9o2mf.cloudfront.net/work/home-additions/home%2Badditions.jpeg" alt="Home Additions" class="lazyload">
         </div>
       </div>
       <div class="service-card">
