--- a/index.html
+++ b/index.html
@@ -7,23 +7,21 @@
     <link rel="shortcut icon" type="image/png" href="https://d319epilr9o2mf.cloudfront.net/favicon.png">
     <link href="css/main.min.css" rel="stylesheet" type="text/css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <!-- <link rel="preconnect" href="https://fonts.gstatic.com"> -->
+    <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=PT+Sans:wght@400;700&display=swap" rel="stylesheet">
     <link href="//cdn-images.mailchimp.com/embedcode/slim-10_7.css" rel="stylesheet" type="text/css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script src="js/script.js"></script>
+    <script src="js/script.min.js"></script>
     <script src="js/lazysizes.min.js"></script>
+    <script src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
    <!-- Global site tag (gtag.js) - Google Analytics -->
-   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-188956910-1">
-   </script>
+   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-188956910-1"></script>
    <script>
-   window.dataLayer = window.dataLayer || [];
-   function gtag(){dataLayer.push(arguments);}
-   gtag('js', new Date());
-
-   gtag('config', 'UA-188956910-1');
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'UA-188956910-1');
    </script>
-
     <script id="mcjs">!function(c,h,i,m,p){m=c.createElement(h),p=c.getElementsByTagName(h)[0],m.async=1,m.src=i,p.parentNode.insertBefore(m,p)}(document,"script","https://chimpstatic.com/mcjs-connected/js/users/3505b437145ee33b184d2b30a/4b299f4ad6c300bf5979542d3.js");</script>
     <meta name="description" content="Home Remodeling Contractor in Cedar Falls and Cedar Rapids, IA">
     <meta name="keywords" content="home remodeling cedar falls, home remodeling cedar rapids, home remodeling cedar valley, t.e.a.m. builders cedar falls, t.e.a.m. builders cedar rapids">
@@ -173,52 +171,67 @@
     </div>
   </section>
 
-<div class="slider">
-    <input type="radio" name="slider" checked="checked" class="slider__nav"/>
-    <input type="radio" name="slider" class="slider__nav"/>
-    <input type="radio" name="slider" class="slider__nav"/>
-    <input type="radio" name="slider" class="slider__nav"/>
-    <input type="radio" name="slider" class="slider__nav"/>
-    <input type="radio" name="slider" class="slider__nav"/>
-
-    <div class="slider__inner">
-      <div class="slider__contents">
-        <img src="https://d319epilr9o2mf.cloudfront.net/testimonial-quote.png" class="lazyload">
-        <p class="slider__txt">
-            First off, I never leave a review but this time is different because of the excellent service I received from Trevor, Kent, and Don and their crews. I had extensive concrete work done as well as a new deck built, and additional landscaping. I can not stress how happy I am with how it all turned out as well as the flexibility to add some additional work while the crews were here... THANK YOU TEAM BUILDERS..You have an exceptional team, integrity,  and will be contacting you again with my next big project.</p>
-      </div>
-      <div class="slider__contents">
-        <img src="https://d319epilr9o2mf.cloudfront.net/testimonial-quote.png" class="lazyload">
-        <p class="slider__txt">
+  <section>
+    <div class="testimonial-container">
+      <h3 class="h1">What Our Customers Say</h3>
+      <div class="testimonials">
+        <div class="testimonial">
+          <div class="quote">
+            <h2></h2>
+            <img src="https://teambuilders-media.s3.us-east-2.amazonaws.com/testimonial-quote.png">
+          </div>
+          <p>
+            First off, I never leave a review but this time is different because of the excellent service I received from Trevor, Kent, and Don and their crews. I had extensive concrete work done as well as a new deck built, and additional landscaping. I can not stress how happy I am with how it all turned out as well as the flexibility to add some additional work while the crews were here... THANK YOU TEAM BUILDERS..You have an exceptional team, integrity,  and will be contacting you again with my next big project.
+          </p>
+        </div>
+        <div class="testimonial">
+          <div class="quote">
+            <h2></h2>
+            <img src="https://teambuilders-media.s3.us-east-2.amazonaws.com/testimonial-quote.png">
+          </div>
+          <p>
             We had the best experience! They provided us with the deck of our dreams and for that we are so grateful. Austin and Trevor are an excellent team and they make the process easy and seamless. We would absolutely use their services again.
-        </p>
-      </div>
-      <div class="slider__contents">
-        <img src="https://d319epilr9o2mf.cloudfront.net/testimonial-quote.png" class="lazyload">
-        <p class="slider__txt">
+          </p>
+        </div>
+        <div class="testimonial">
+          <div class="quote">
+            <h2></h2>
+            <img src="https://teambuilders-media.s3.us-east-2.amazonaws.com/testimonial-quote.png">
+          </div>
+          <p>
             T.E.A.M Builders exceeded our expectations when it came to timing, quality, craftmanship and customer service regarding our composite deck the built from scratch. Any issue was solved rapidly and communication was a breeze. I would recommend them for any project, big or small! You guys rock!
-        </p>
-      </div>
-      <div class="slider__contents">
-        <img src="https://d319epilr9o2mf.cloudfront.net/testimonial-quote.png" class="lazyload">
-        <p class="slider__txt">
+          </p>
+        </div>
+        <div class="testimonial">
+          <div class="quote">
+            <h2></h2>
+            <img src="https://teambuilders-media.s3.us-east-2.amazonaws.com/testimonial-quote.png">
+          </div>
+          <p>
             Amazing work and very professional I had zero complaints! Austin and his crew transformed my deck into an outdoor oasis. I would highly recommend them for any future projects and anyone in the Cedar Falls area.
-        </p>
-      </div>
-      <div class="slider__contents">
-        <img src="https://d319epilr9o2mf.cloudfront.net/testimonial-quote.png" class="lazyload">
-        <p class="slider__txt">
+          </p>
+        </div>
+        <div class="testimonial">
+          <div class="quote">
+            <h2></h2>
+            <img src="https://teambuilders-media.s3.us-east-2.amazonaws.com/testimonial-quote.png">
+          </div>
+          <p>
             I contacted Team Builders to do a roof replacement on my newly purchased home. They got the estimate to me within a couple hours, explained everything to me and were able to schedule the repair super quickly! The price is extremely competitive and they only use the highest quality of materials! They were able to get my roof done in one day - and the roof looks amazing! Every interaction I had with them was great! I won’t trust anyone else to do my home repairs!
-        </p>
-      </div>
-      <div class="slider__contents">
-        <img src="https://d319epilr9o2mf.cloudfront.net/testimonial-quote.png" class="lazyload">
-        <p class="slider__txt">
+          </p>
+        </div>
+        <div class="testimonial">
+          <div class="quote">
+            <h2></h2>
+            <img src="https://teambuilders-media.s3.us-east-2.amazonaws.com/testimonial-quote.png">
+          </div>
+          <p>
             This team is absolutely awesome. They were very thorough and verified everything before moving forward. They made sure we were satisfied with all items. They even came back quickly to add Lattice upon my request. Let me just say, my deck looks 100% better than it did before they started. I am absolutely amazed at the finished work. I highly, highly recommend T.E.A.M. Builders
-        </p>
+          </p>
+        </div>
       </div>
     </div>
-  </div>
+  </section>
 
   <section class="gradient-banner">
      <div class="gradient-content">
