fix slider, change green color

--- a/index.html
+++ b/index.html
@@ -9,11 +9,12 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=PT+Sans:wght@400;700&display=swap" rel="stylesheet">
-    <link href="//cdn-images.mailchimp.com/embedcode/slim-10_7.css" rel="stylesheet" type="text/css">
+    <link href="cdn-images.mailchimp.com/embedcode/slim-10_7.css" rel="stylesheet" type="text/css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="js/script.min.js"></script>
     <script src="js/lazysizes.min.js"></script>
-    <script src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
+    <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
    <!-- Global site tag (gtag.js) - Google Analytics -->
    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-188956910-1"></script>
    <script>
@@ -227,11 +228,7 @@
           </div>
           <p>
             This team is absolutely awesome. They were very thorough and verified everything before moving forward. They made sure we were satisfied with all items. They even came back quickly to add Lattice upon my request. Let me just say, my deck looks 100% better than it did before they started. I am absolutely amazed at the finished work. I highly, highly recommend T.E.A.M. Builders
-          </p>
-        </div>
-      </div>
-    </div>
-  </section>
+          </p
 
   <section class="gradient-banner">
      <div class="gradient-content">
